minor fix for double scroll-bar

--- a/src/components/pages/home/Home.css
+++ b/src/components/pages/home/Home.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 30px);
 }
 .nav {
   width: 100%;
